--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,14 @@
       tools:layout_editor_absoluteX="101dp"
       tools:layout_editor_absoluteY="16dp" />
 
+  <ProgressBar
+      android:id="@+id/progresBar1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginBottom="80dp"/>
+
 
 
 </RelativeLayout>
