--- a/app/src/main/res/layout/activity_main__home.xml
+++ b/app/src/main/res/layout/activity_main__home.xml
@@ -71,15 +71,12 @@
 
     <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="374dp"
+        android:layout_width="match_parent"
         android:layout_height="126dp"
-        android:layout_alignStart="@+id/icUser"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="140dp"
         app:columnCount="3"
-        android:foregroundGravity="center"
-        app:orientation="horizontal"
-        app:rowCount="1">
+        app:orientation="horizontal">
 
         <android.support.v7.widget.CardView
             android:id="@+id/menu_chat"
