--- a/app/src/main/res/layout/activity_pesan.xml
+++ b/app/src/main/res/layout/activity_pesan.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PesanActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg_utama">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -48,8 +48,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/button2"
