--- a/app/src/main/res/layout/popwindow.xml
+++ b/app/src/main/res/layout/popwindow.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical"
     android:layout_width="300dp"
     android:layout_height="300dp"
-    android:background="#6e74dc"
     android:padding="5dp"
     android:layout_gravity="center"
     >
@@ -17,7 +16,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="13dp"
         android:layout_marginTop="10dp"
-        android:text="Bantuan"
+        android:text="Bantuan !"
         android:textSize="25sp"
         android:textStyle="bold" />
 
