--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00227A"
+    android:background="@drawable/animation_bg"
+    android:id="@+id/animLayout"
     tools:context=".MainActivity">
 
   <ImageView
