--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -57,14 +57,15 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="48dp"
+                android:layout_height="61dp"
                 android:src="@drawable/nim" />
 
             <TextView
+                android:layout_gravity="center"
                 android:id="@+id/nim_profil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="NIM"
@@ -79,14 +80,15 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="48dp"
+                android:layout_height="61dp"
                 android:src="@drawable/nama_profil" />
 
             <TextView
+                android:layout_gravity="center"
                 android:id="@+id/nama_profil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="Nama"
@@ -101,14 +103,15 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="48dp"
+                android:layout_height="45dp"
                 android:src="@drawable/password_profil" />
 
             <TextView
+                android:layout_gravity="center"
                 android:id="@+id/password_profil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="Password"
