--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -22,6 +22,7 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <TextView
+        android:textColor="#000"
         android:id="@+id/textView_User"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
