--- a/app/src/main/res/layout/activity_detail__gedung_.xml
+++ b/app/src/main/res/layout/activity_detail__gedung_.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detail_Ruangan_Activity">
-
+    tools:context=".detail_Gedung_Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,7 +113,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Detail Ruangan"
+        android:text="Detail Gedung"
         android:textColor="#fff"
         android:textSize="35dp" />
 
