--- a/app/src/main/res/layout/slide_image.xml
+++ b/app/src/main/res/layout/slide_image.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/img_slide"
+        android:id="@+id/img_list_ruangan"
         android:layout_width="345dp"
-        android:layout_height="171dp"
-        android:layout_alignParentTop="true"
+        android:layout_height="207dp"
+        android:layout_below="@+id/txt_nm_r"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
+
+    <TextView
+        android:id="@+id/txt_kd_r"
+        android:layout_width="102dp"
+        android:layout_height="33dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/img_list_ruangan"
+        android:gravity="top|center_vertical|center_horizontal"
+        android:text="TextView"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txt_nm_r"
+        android:layout_width="240dp"
+        android:layout_height="33dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/txt_kd_r"
+        android:gravity="center_horizontal"
+        android:text="TextView"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
