Memperbaiki kesalahan pemanggilan recycler view yang terbalik, penambahan login belum fix

--- a/app/src/main/res/layout/slide_image.xml
+++ b/app/src/main/res/layout/slide_image.xml
@@ -5,33 +5,21 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/img_list_ruangan"
+        android:id="@+id/img_slide"
         android:layout_width="345dp"
         android:layout_height="207dp"
-        android:layout_below="@+id/txt_nm_r"
+        android:layout_below="@+id/txt_slide"
         android:layout_centerHorizontal="true"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/txt_kd_r"
+        android:id="@+id/txt_slide"
         android:layout_width="102dp"
         android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/img_list_ruangan"
+        android:layout_centerHorizontal="true"
         android:gravity="top|center_vertical|center_horizontal"
         android:text="TextView"
         android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txt_nm_r"
-        android:layout_width="240dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/txt_kd_r"
-        android:gravity="center_horizontal"
-        android:text="TextView"
-        android:textSize="18sp"
         android:textStyle="bold" />
 
 </RelativeLayout>
