--- a/app/src/main/res/layout/list_gedung.xml
+++ b/app/src/main/res/layout/list_gedung.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,29 +11,34 @@
         android:layout_height="207dp"
         android:layout_below="@+id/txt_nm_r"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="60dp" />
 
     <TextView
-        android:id="@+id/txt_kd_r"
+        android:id="@+id/txt_kd_gedung"
         android:layout_width="102dp"
         android:layout_height="33dp"
+        android:layout_alignStart="@+id/img_list_ruangan"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/img_list_gedung"
         android:gravity="top|center_vertical|center_horizontal"
         android:text="TextView"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp" />
 
     <TextView
-        android:id="@+id/txt_nm_r"
+        android:id="@+id/txt_nm_gedung"
         android:layout_width="240dp"
         android:layout_height="33dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:layout_toEndOf="@+id/txt_kd_r"
+        android:layout_toEndOf="@+id/txt_kd_gedung"
         android:gravity="center_horizontal"
         android:text="TextView"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="142dp"
+        tools:layout_editor_absoluteY="16dp" />
 
 </RelativeLayout>
