--- a/app/src/main/res/layout/list_gedung.xml
+++ b/app/src/main/res/layout/list_gedung.xml
@@ -5,40 +5,104 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/img_list_gedung"
-        android:layout_width="345dp"
-        android:layout_height="207dp"
-        android:layout_below="@+id/txt_nm_r"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="60dp" />
-
-    <TextView
-        android:id="@+id/txt_kd_gedung"
-        android:layout_width="102dp"
-        android:layout_height="33dp"
-        android:layout_alignStart="@+id/img_list_ruangan"
+    <android.support.v7.widget.CardView
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:gravity="top|center_vertical|center_horizontal"
-        android:text="TextView"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
 
-    <TextView
-        android:id="@+id/txt_nm_gedung"
-        android:layout_width="240dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/txt_kd_gedung"
-        android:gravity="center_horizontal"
-        android:text="TextView"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:background="@android:color/white"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="2dp">
+
+        <RelativeLayout
+            android:layout_width="360dp"
+            android:layout_height="match_parent"
+            android:background="#5f5fc4"
+            >
+
+            <TextView
+                android:id="@+id/txt_kode_gdg"
+                android:layout_width="267dp"
+                android:layout_height="29dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="83dp"
+                android:layout_marginBottom="10dp"
+                android:autoSizeMaxTextSize="20sp"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeTextType="uniform"
+                android:gravity="left"
+                android:text="kodegdg"
+                android:textColor="#000"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_nama_gdg"
+                android:layout_width="263dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="36dp"
+                android:layout_marginEnd="82dp"
+                android:autoSizeMaxTextSize="20sp"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeTextType="uniform"
+                android:gravity="left"
+                android:text="Namagdg"
+                android:textColor="#000" />
+
+            <ImageView
+                android:id="@+id/ivDetail"
+                android:layout_width="42dp"
+                android:layout_height="34dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="-54dp"
+                android:layout_toEndOf="@+id/txt_kode_gdg"
+                android:src="@drawable/detail" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+    <!--<ImageView-->
+        <!--android:id="@+id/img_list_gedung"-->
+        <!--android:layout_width="345dp"-->
+        <!--android:layout_height="207dp"-->
+        <!--android:layout_below="@+id/txt_nm_r"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--app:srcCompat="@mipmap/ic_launcher_round"-->
+        <!--tools:layout_editor_absoluteX="16dp"-->
+        <!--tools:layout_editor_absoluteY="60dp" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/txt_kd_gedung"-->
+        <!--android:layout_width="102dp"-->
+        <!--android:layout_height="33dp"-->
+        <!--android:layout_alignStart="@+id/img_list_ruangan"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:gravity="top|center_vertical|center_horizontal"-->
+        <!--android:text="TextView"-->
+        <!--android:textSize="16sp"-->
+        <!--android:textStyle="bold"-->
+        <!--tools:layout_editor_absoluteX="16dp"-->
+        <!--tools:layout_editor_absoluteY="16dp" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/txt_nm_gedung"-->
+        <!--android:layout_width="240dp"-->
+        <!--android:layout_height="33dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_toEndOf="@+id/txt_kd_gedung"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:text="TextView"-->
+        <!--android:textSize="18sp"-->
+        <!--android:textStyle="bold"-->
+        <!--tools:layout_editor_absoluteX="142dp"-->
+        <!--tools:layout_editor_absoluteY="16dp" />-->
 
 </RelativeLayout>
