--- a/app/src/main/res/layout/slide_image.xml
+++ b/app/src/main/res/layout/slide_image.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/img_slide"
-        android:layout_width="345dp"
-        android:layout_height="207dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/txt_slide"
         android:layout_centerHorizontal="true"
         app:srcCompat="@mipmap/ic_launcher_round" />
