--- a/app/src/main/res/layout/activity_main_ruangan.xml
+++ b/app/src/main/res/layout/activity_main_ruangan.xml
@@ -10,10 +10,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main"
         android:layout_width="match_parent"
-        android:layout_height="365dp"
+        android:layout_height="426dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="128dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="141dp"
         android:scrollbars="vertical" />
 
     <ImageView
