--- a/app/src/main/res/layout/list_gedung.xml
+++ b/app/src/main/res/layout/list_gedung.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
@@ -15,22 +15,21 @@
         android:layout_marginRight="10dp"
 
         android:background="@android:color/white"
-        app:cardCornerRadius="4dp"
+        app:cardCornerRadius="9dp"
         app:cardElevation="1dp"
         app:cardMaxElevation="2dp">
 
         <RelativeLayout
             android:layout_width="360dp"
-            android:layout_height="match_parent"
-            android:background="#5f5fc4"
-            >
+            android:layout_height="60dp"
+            android:background="#fffb00">
 
             <TextView
                 android:id="@+id/txt_kode_gdg"
                 android:layout_width="267dp"
                 android:layout_height="29dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="83dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginBottom="10dp"
                 android:autoSizeMaxTextSize="20sp"
                 android:autoSizeMinTextSize="10sp"
@@ -46,8 +45,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="82dp"
+                android:layout_marginTop="33dp"
+                android:layout_marginEnd="33dp"
                 android:autoSizeMaxTextSize="20sp"
                 android:autoSizeMinTextSize="10sp"
                 android:autoSizeTextType="uniform"
@@ -57,52 +56,15 @@
 
             <ImageView
                 android:id="@+id/ivDetail"
-                android:layout_width="42dp"
-                android:layout_height="34dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="-54dp"
+                android:layout_width="53dp"
+                android:layout_height="44dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="-360dp"
+                android:layout_marginTop="9dp"
                 android:layout_toEndOf="@+id/txt_kode_gdg"
                 android:src="@drawable/detail" />
 
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
-
-
-    <!--<ImageView-->
-        <!--android:id="@+id/img_list_gedung"-->
-        <!--android:layout_width="345dp"-->
-        <!--android:layout_height="207dp"-->
-        <!--android:layout_below="@+id/txt_nm_r"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--app:srcCompat="@mipmap/ic_launcher_round"-->
-        <!--tools:layout_editor_absoluteX="16dp"-->
-        <!--tools:layout_editor_absoluteY="60dp" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/txt_kd_gedung"-->
-        <!--android:layout_width="102dp"-->
-        <!--android:layout_height="33dp"-->
-        <!--android:layout_alignStart="@+id/img_list_ruangan"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:gravity="top|center_vertical|center_horizontal"-->
-        <!--android:text="TextView"-->
-        <!--android:textSize="16sp"-->
-        <!--android:textStyle="bold"-->
-        <!--tools:layout_editor_absoluteX="16dp"-->
-        <!--tools:layout_editor_absoluteY="16dp" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/txt_nm_gedung"-->
-        <!--android:layout_width="240dp"-->
-        <!--android:layout_height="33dp"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_toEndOf="@+id/txt_kd_gedung"-->
-        <!--android:gravity="center_horizontal"-->
-        <!--android:text="TextView"-->
-        <!--android:textSize="18sp"-->
-        <!--android:textStyle="bold"-->
-        <!--tools:layout_editor_absoluteX="142dp"-->
-        <!--tools:layout_editor_absoluteY="16dp" />-->
-
 </RelativeLayout>
