--- a/app/src/main/res/layout/list_ruangan.xml
+++ b/app/src/main/res/layout/list_ruangan.xml
@@ -1,38 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/img_list_gedung"
-        android:layout_width="345dp"
-        android:layout_height="207dp"
-        android:layout_below="@+id/txt_nm_r"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@mipmap/ic_launcher_round" />
-
-    <TextView
-        android:id="@+id/txt_kd_r"
-        android:layout_width="102dp"
-        android:layout_height="33dp"
+    <android.support.v7.widget.CardView
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/img_list_gedung"
-        android:gravity="top|center_vertical|center_horizontal"
-        android:text="TextView"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
 
-    <TextView
-        android:id="@+id/txt_nm_r"
-        android:layout_width="240dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:layout_toEndOf="@+id/txt_kd_r"
-        android:gravity="center_horizontal"
-        android:text="TextView"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:background="@android:color/white"
+        app:cardCornerRadius="9dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="2dp">
 
+        <RelativeLayout
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:background="#fffb00">
+        >
+
+            <TextView
+                android:id="@+id/txt_kode_ruang"
+                android:layout_width="267dp"
+                android:layout_height="29dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:autoSizeMaxTextSize="20sp"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeTextType="uniform"
+                android:gravity="left"
+                android:text="kodegdg"
+                android:textColor="#000"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_nama_ruang"
+                android:layout_width="263dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="23dp"
+                android:autoSizeMaxTextSize="20sp"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeTextType="uniform"
+                android:gravity="left"
+                android:text="Nama_ruang"
+                android:textColor="#000" />
+
+            <ImageView
+                android:id="@+id/ivDetail"
+                android:layout_marginTop="9dp"
+                android:layout_width="53dp"
+                android:layout_height="44dp"
+                android:src="@drawable/detail"
+                />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
