--- a/app/src/main/res/layout/activity_detail__gedung_.xml
+++ b/app/src/main/res/layout/activity_detail__gedung_.xml
@@ -20,6 +20,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/img_detail_gedung"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher_round" />
@@ -96,7 +97,7 @@
         app:srcCompat="@drawable/bg_detail" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_BackGedung"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -106,13 +107,13 @@
         android:background="@drawable/back" />
 
     <TextView
-        android:gravity="center"
-        android:id="@+id/textView_User"
+        android:id="@+id/textView_namaGedung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Detail Gedung"
         android:textColor="#fff"
         android:textSize="35dp" />
