--- a/app/src/main/res/layout/activity_detail__ruangan_.xml
+++ b/app/src/main/res/layout/activity_detail__ruangan_.xml
@@ -7,6 +7,16 @@
     tools:context=".detail_Ruangan_Activity">
 
 
+    <TextView
+        android:id="@+id/text_nama_ruangan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView6"
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="162dp"
@@ -21,8 +31,9 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/img_detail_ruangan"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="112dp"
             android:src="@mipmap/ic_launcher_round" />
 
     </LinearLayout>
@@ -51,16 +62,13 @@
                 android:layout_height="61dp"
                 android:src="@drawable/maps" />
 
-            <TextView
-                android:id="@+id/lokasi"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="6dp"
-                android:text="NIM"
-                android:textColor="#000"
-                android:textSize="18dp" />
+            <Button
+                android:id="@+id/btnMapsRuangan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Click Maps" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -97,7 +105,7 @@
         app:srcCompat="@drawable/bg_detail" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_Back_ruangan"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -107,13 +115,13 @@
         android:background="@drawable/back" />
 
     <TextView
-        android:gravity="center"
-        android:id="@+id/textView_User"
+        android:id="@+id/textView_KD_Ruangan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Detail Ruangan"
         android:textColor="#fff"
         android:textSize="35dp" />
