--- a/app/src/main/res/layout/activity_main__home.xml
+++ b/app/src/main/res/layout/activity_main__home.xml
@@ -21,12 +21,14 @@
 
     <TextView
         android:id="@+id/idNamaUser"
-        android:layout_width="wrap_content"
+        android:layout_width="271dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/icUser"
-
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="142dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-18dp"
+        android:layout_marginEnd="42dp"
+        android:gravity="center"
         android:text="#NamaUser"
         android:textColor="#fff"
         android:textSize="20dp"
