fix fitur update password

--- a/app/src/main/res/layout/activity_detail__gedung_.xml
+++ b/app/src/main/res/layout/activity_detail__gedung_.xml
@@ -7,7 +7,7 @@
     tools:context=".detail_Gedung_Activity">
 
     <TextView
-        android:id="@+id/text_namaGedung"
+        android:id="@+id/textView_kodeGedung"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -33,7 +33,7 @@
         <ImageView
             android:id="@+id/img_detail_gedung"
             android:layout_width="match_parent"
-            android:layout_height="131dp"
+            android:layout_height="match_parent"
             android:src="@mipmap/ic_launcher_round" />
 
     </LinearLayout>
@@ -44,9 +44,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="82dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="110dp"
         android:foregroundGravity="center"
         android:gravity="center"
         android:orientation="vertical">
@@ -83,7 +83,7 @@
                 android:src="@drawable/location" />
 
             <TextView
-                android:id="@+id/deskripsi_map"
+                android:id="@+id/text_namaGedung"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:layout_gravity="center"
@@ -115,7 +115,7 @@
         android:background="@drawable/back" />
 
     <TextView
-        android:id="@+id/textView_kodeGedung"
+        android:id="@+id/textView_Detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -124,6 +124,6 @@
         android:gravity="center"
         android:text="Detail Gedung"
         android:textColor="#fff"
-        android:textSize="35dp" />
+        android:textSize="30dp" />
 
 </RelativeLayout>
