--- a/app/src/main/res/layout/activity_sunting_.xml
+++ b/app/src/main/res/layout/activity_sunting_.xml
@@ -34,6 +34,7 @@
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="115dp"
+        android:foregroundGravity="center"
         android:layout_height="104dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
