--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -143,7 +143,7 @@
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="15dp"
-                android:src="@drawable/img_sunting_profil" />
+                android:src="@drawable/exchange" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -152,7 +152,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="11dp"
                 android:text="Sunting"
-                android:textColor="#000"
+                android:textColor="#fff"
                 android:textSize="16dp" />
 
         </LinearLayout>
@@ -169,7 +169,7 @@
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="15dp"
-                android:src="@drawable/img_exit_profil" />
+                android:src="@drawable/logout" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -178,7 +178,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="11dp"
                 android:text="Keluar"
-                android:textColor="#000"
+                android:textColor="#fff"
                 android:textSize="16dp" />
 
         </LinearLayout>
