--- a/app/src/main/res/layout/perbaikan_fitur.xml
+++ b/app/src/main/res/layout/perbaikan_fitur.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="300dp"
     android:padding="5dp"
     android:layout_gravity="center"
-    android:background="#fff">
+    android:background="#fff"
+    tools:ignore="MissingDefaultResource">
 
 
     <TextView
